--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -80,6 +80,7 @@
             <div id="gallery-container" class="gallery">
                 <!-- Les éléments de la galerie de la modale seront ajoutés dynamiquement ici -->
             </div>
+            <hr class="gallery-separator">
             <button id="add-photo" class="visible">Ajouter une photo</button> <!-- Bouton pour ajouter une photo -->
         </div>
     </div>
@@ -115,7 +116,7 @@
                     </select>
 
                     <input type="file" id="image" name="image" accept=".jpg, .jpeg, .png" required>
-                    <hr class="separator">
+                    <hr class="gallery-separator">
                     <div class="button-container">
                         <button type="submit" class="btn-add-work">Valider</button>
                     </div>
